log
Thu 04 May 2023 11:01:12 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
90e85e2
Thu 04 May 2023 11:02:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e7f7297
Thu 04 May 2023 11:17:05 PM UTC: 
 sudoku.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
 tests:  2|4
total_score: 15/70
3ef5882
Thu 04 May 2023 11:22:44 PM UTC: 
 sudoku.c | 52 ++++++++++++++++++++++------------------------------
 1 file changed, 22 insertions(+), 30 deletions(-)
 tests:  5|3
total_score: 35/70
05a4e7e
Thu 04 May 2023 11:24:16 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
34634b3
Thu 04 May 2023 11:27:24 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|2
total_score: 45/70
9a7a33c
Thu 04 May 2023 11:40:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
662d7e0
Thu 04 May 2023 11:40:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
6f93776
Thu 04 May 2023 11:49:52 PM UTC: 
 sudoku.c | 44 +++++++++++++++++---------------------------
 1 file changed, 17 insertions(+), 27 deletions(-)
 tests:  6|2
total_score: 45/70
bf55e37
